add tf, cicd, k8s manifests

--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -232,7 +232,8 @@ ingress:
 
 gkeGateway:
   enabled: false
-  hosts:
+  hosts: 
+    - host: ""
   routes:
     - path: /
       service: gateway-api-gw
